<resources>
    <string name="app_name">EmployeeProject</string>
    <string name="next_employee">NEXT EMPLOYEE</string>
    <string name="prev_employee">PREV EMPLOYEE</string>
    <string name="employee_tax">EMPLOYEE TAX</string>
    <string name="emp_id">Emp ID</string>
    <string name="emp_name">Emp Name</string>
    <string name="emp_salary">Emp Salary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>